--- a/jquick-sql-metastore/pom.xml
+++ b/jquick-sql-metastore/pom.xml
@@ -7,5 +7,15 @@
         <version>1.0.0</version>
     </parent>
     <artifactId>jquick-sql-metastore</artifactId>
-
+    <dependencies>
+        <dependency>
+            <groupId>io.github.paohaijiao</groupId>
+            <artifactId>jquick-sql-connector</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 </project>
