--- a/jquick-sql-executor/pom.xml
+++ b/jquick-sql-executor/pom.xml
@@ -7,4 +7,17 @@
         <version>1.0.0</version>
     </parent>
     <artifactId>jquick-sql-executor</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>io.github.paohaijiao</groupId>
+            <artifactId>jquick-sql-transformer</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
+    </dependencies>
+
 </project>
