--- a/jquick-sql-transformer/pom.xml
+++ b/jquick-sql-transformer/pom.xml
@@ -7,5 +7,10 @@
         <version>1.0.0</version>
     </parent>
     <artifactId>jquick-sql-transformer</artifactId>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 </project>
