--- a/jquick-sql-assembler/pom.xml
+++ b/jquick-sql-assembler/pom.xml
@@ -6,7 +6,7 @@
         <artifactId>jquick-sql</artifactId>
         <version>1.0.0</version>
     </parent>
-    <artifactId>jquick-sql-executor</artifactId>
-    <name>Archetype - jquick-sql-executor</name>
+    <artifactId>jquick-sql-assembler</artifactId>
+    <name>Archetype - jquick-sql-assembler</name>
     <url>http://maven.apache.org</url>
 </project>
