--- a/jquick-sql-assembler/pom.xml
+++ b/jquick-sql-assembler/pom.xml
@@ -4,9 +4,13 @@
     <parent>
         <groupId>io.github.paohaijiao</groupId>
         <artifactId>jquick-sql</artifactId>
-        <version>1.0.0</version>
+        <version>1.3.0</version>
     </parent>
     <artifactId>jquick-sql-assembler</artifactId>
-    <name>Archetype - jquick-sql-assembler</name>
-    <url>http://maven.apache.org</url>
+    <dependencies>
+        <dependency>
+            <groupId>io.github.paohaijiao</groupId>
+            <artifactId>jquick-sql-metastore</artifactId>
+        </dependency>
+    </dependencies>
 </project>
