feature: adjust the DataSetJoinerStrategy merge policy

--- a/jquick-sql-executor/pom.xml
+++ b/jquick-sql-executor/pom.xml
@@ -12,5 +12,9 @@
             <groupId>io.github.paohaijiao</groupId>
             <artifactId>jquick-sql-transformer</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 </project>
