--- a/jquick-sql-assembler/pom.xml
+++ b/jquick-sql-assembler/pom.xml
@@ -12,5 +12,9 @@
             <groupId>io.github.paohaijiao</groupId>
             <artifactId>jquick-sql-metastore</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 </project>
